--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
           api_location: "" 
           output_location: "build" 
         env:
+          CI: false
           REACT_APP_AZURE_CS_SPEECH_KEY: ${{ secrets.REACT_APP_AZURE_CS_SPEECH_KEY }}
           REACT_APP_AZURE_CS_SPEECH_REGION: ${{ secrets.REACT_APP_AZURE_CS_SPEECH_REGION }}
   close_pull_request_job:
