--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: Azure Static Web App
 on:  
+  push: 
+    branches:
+      - main
   workflow_dispatch:
   pull_request:
     types: [opened, synchronize, reopened, closed]
