--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,10 +30,10 @@ jobs:
     - name: Terraform Init
       id: init
       run: terraform init \
-        -backend-config="resource_group_name=${{ secrets.AZURE_STORAGE_ACCOUNT_RESOURCE_GROUP_NAME }}"
+        -backend-config="resource_group_name=${{ secrets.AZURE_STORAGE_ACCOUNT_RESOURCE_GROUP_NAME }}" \z
         -backend-config="storage_account_name=${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }}" \
         -backend-config="container_name=${{ secrets.AZURE_STORAGE_ACCOUNT_CONTAINER_NAME }}" \
-        -backend-config="key=${{ secrets.AZURE_STORAGE_ACCOUNT_CONTAINER_KEY }}"
+        -backend-config="key=${{ secrets.AZURE_STORAGE_ACCOUNT_CONTAINER_KEY }}" \
         -backend-config="sas_token=${{ secrets.AZURE_STORAGE_ACCOUNT_CONTAINER_TOKEN }}"
     - name: Terraform Validate
       id: validate
