--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,6 +15,7 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+    environment: Production
     permissions:
       pull-requests: write
     env:
