--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,15 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+    paths: 
+      - 'web/**'
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+    paths: 
+      - 'web/**'
   schedule:
     - cron: '36 2 * * 3'
     
